Adjusted scrolling animation to be dependent on the skills div instead of the individual images. This way the animation appears once 75% of the skills div is visible, so both rows are showing. This prevents a delay if the user does not reveal both rows at the same time (scrolling slowly).

--- a/style.css
+++ b/style.css
@@ -177,7 +177,7 @@ a {
 }
 
 /* Landing div */
-#landingDiv{
+#home{
 	position:absolute;
 	height:100%;
 	width:100%;
@@ -337,9 +337,10 @@ h3{
 
 /* Skills div */
 #skills{
-	height: 710px;
+	height: 75vh;
 	position:relative;
 	background-color:#07223d;
+	overflow:hidden;
 }
 
 h4{
@@ -492,7 +493,7 @@ h4{
 	}
 	
 	/* Landing div */
-	#landingDiv{
+	#home{
 		height: -webkit-fill-available;
 	}
 	
